--- a/index.html
+++ b/index.html
@@ -3,30 +3,49 @@
 
 <head>
     <title>UWC Myanmar - Map Leaflet</title>
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.5.1/dist/leaflet.css" integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ==" crossorigin=""/>
-    <script src="https://unpkg.com/leaflet@1.5.1/dist/leaflet.js" integrity="sha512-GffPMF3RvMeYyc1LWMHtK8EbPv0iNZ8/oTtHPx9/cc2ILxQ+u905qIwdpULaqDkyBKgOaB57QTMg7ztg8Jm2Og==" crossorigin=""></script>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.5.1/dist/leaflet.css"
+        integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ=="
+        crossorigin="" />
+    <script src="https://unpkg.com/leaflet@1.5.1/dist/leaflet.js"
+        integrity="sha512-GffPMF3RvMeYyc1LWMHtK8EbPv0iNZ8/oTtHPx9/cc2ILxQ+u905qIwdpULaqDkyBKgOaB57QTMg7ztg8Jm2Og=="
+        crossorigin=""></script>
     <!-- Make sure you put this AFTER Leaflet's CSS -->
-   
+
 </head>
 
 <body style="padding:0px;margin:0px;">
 
-    <div id="mapid" style="height:500px;width:100%;padding:0px;margin:0px;"></div>
+    <center>
+        <div id="mapid" style="height:100vh;width:100vw;padding:0px;margin:0px;"></div>
+    </center>
+
     <script>
+        var mymap = L.map('mapid', {
+            center: [0, 0],
+            zoom: 2,
+            scrollWheelZoom: false
+        });
+        L.tileLayer(
+            'https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token=pk.eyJ1IjoibWFwYm94IiwiYSI6ImNpejY4NXVycTA2emYycXBndHRqcmZ3N3gifQ.rJcFIG214AriISLbB6B5aw', {
+                maxZoom: 18,
+                attribution: '',
+                id: 'mapbox.streets'
+            }).addTo(mymap);
 
-    	var mymap = L.map('mapid').setView([16.8400155, 96.1257297], 2);
+        var text = '{"employees":[' +
+            '{"firstName":"John","lastName":"Doe" },' +
+            '{"firstName":"Anna","lastName":"Smith" },' +
+            '{"firstName":"Peter","lastName":"Jones" }]}';
 
-    	L.tileLayer('https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token=pk.eyJ1IjoibWFwYm94IiwiYSI6ImNpejY4NXVycTA2emYycXBndHRqcmZ3N3gifQ.rJcFIG214AriISLbB6B5aw', {
-    		maxZoom: 18,
-    		attribution: '',
-    		id: 'mapbox.streets'
-    	}).addTo(mymap);
+        obj = JSON.parse(text);
 
-      L.marker([16.8400155, 96.1257297]).addTo(mymap)
-    		.bindPopup("<h4>Phaung Phaung Logistics &amp; Technologies</h4><p id='noindent'>Building No (5), Room No (D-1), First Floor, (52) Street, (6) Quarters, Hlaing Township,Yangon, Myanmar</p><hr>").openPopup();
+        L.marker([48.3479497, -123.5657213]).addTo(mymap)
+            .bindPopup(
+                "<img src='https://www.uwc.org/_site/data/images/news/17/home-Image%201.jpg' width='200px'/><h4>"+obj.employees[1].firstName+"</h4><p>Victoria, Canada<p>"
+            ).openPopup();
+
 
         var popup = L.popup();
-
     </script>
 
 </body>
