--- a/index.html
+++ b/index.html
@@ -24,9 +24,10 @@
 
     <script>
         var mymap = L.map('mapid', {
-            center: [30, 0],
+            center: [40, 0],
             zoom: 2,
-            scrollWheelZoom: false
+            scrollWheelZoom: false,
+            zoomControl: false
         });
         L.tileLayer(
             'https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token=pk.eyJ1IjoibWFwYm94IiwiYSI6ImNpejY4NXVycTA2emYycXBndHRqcmZ3N3gifQ.rJcFIG214AriISLbB6B5aw', {
@@ -35,25 +36,43 @@
                 id: 'mapbox.streets'
             }).addTo(mymap);
 
-        var text = '{"uwc":[' +
-            '{"name":"Pearson College UWC","location":"Victoria, Canada","latitude":"48.3479497","longitude":"-123.5657213","image_url":"https://www.uwc.org/_site/data/images/news/17/home-Image%201.jpg" },' +
+            
 
-            '{"name":"asdf","location":"sadf","latitude":"234","longitude":"234","image_url":"https://www.uwc.org/_site/data/images/news/17/home-Image%201.jpg" }]}';
+        var text = '{"uwc":[' +
+            '{"name":"Pearson College UWC","location":"Victoria, Canada","latitude":"48.3479497","longitude":"-123.5657213","image_url":"/_site/data/images/news/17/home-Image%201.jpg" },' +
+            '{"name":"UWC-USA","location":"Montezuma, New Mexico","latitude":"35.6559717","longitude":"-105.2834712","image_url":"/_site/data/images/news/18/home-UWC173.jpg" },' +
+            '{"name":"","location":"","latitude":"","longitude":"","image_url":"" },' +
+            '{"name":"","location":"","latitude":"","longitude":"","image_url":"" },' +
+            '{"name":"","location":"","latitude":"","longitude":"","image_url":"" },' +
+            '{"name":"","location":"","latitude":"","longitude":"","image_url":"" },' +
+            '{"name":"","location":"","latitude":"","longitude":"","image_url":"" },' +
+            '{"name":"","location":"","latitude":"","longitude":"","image_url":"" },' +
+            '{"name":"","location":"","latitude":"","longitude":"","image_url":"" },' +
+            '{"name":"","location":"","latitude":"","longitude":"","image_url":"" },' +
+            '{"name":"","location":"","latitude":"","longitude":"","image_url":"" },' +
+            '{"name":"","location":"","latitude":"","longitude":"","image_url":"" },' +
+            '{"name":"","location":"","latitude":"","longitude":"","image_url":"" },' +
+            '{"name":"","location":"","latitude":"","longitude":"","image_url":"" },' +
+            '{"name":"","location":"","latitude":"","longitude":"","image_url":"" },' +
+            '{"name":"","location":"","latitude":"","longitude":"","image_url":"" },' +
+            '{"name":"asdf","location":"sadf","latitude":"12","longitude":"12","image_url":"https://www.uwc.org/_site/data/images/news/17/home-Image%201.jpg" }]}';
 
         obj = JSON.parse(text);
 
-        console.log();
-
-        L.marker([obj.uwc[0].latitude, obj.uwc[0].longitude]).addTo(mymap)
+        var i;
+        for (i = 0; i <= 1; i++) {
+            L.marker([obj.uwc[i].latitude, obj.uwc[i].longitude]).addTo(mymap)
             .bindPopup(
-                "<img src='" + obj.uwc[0].image_url + "' width='200px'/><h4>" + obj.uwc[0].name + "</h4><p>" + obj.uwc[
-                    0].location + "<p>"
+                "<img src='" + "https://www.uwc.org" +obj.uwc[i].image_url + "' width='200px'/><h3>" + obj.uwc[i].name + "</h3><p>" + obj.uwc[
+                    i].location + "<p>"
             ).on('mouseover', function (e) {
-            this.openPopup();
-        }).on('mouseout', function (e) {
-            this.closePopup();
-        });
+                this.openPopup();
+            }).on('mouseout', function (e) {
+                this.closePopup();
+            });
+        }
 
+        
     </script>
 
 </body>
