--- a/index.html
+++ b/index.html
@@ -24,11 +24,18 @@
 
     <script>
         var mymap = L.map('mapid', {
-            center: [40, 0],
+            center: [30, 0],
             zoom: 2,
             scrollWheelZoom: false,
             zoomControl: false
         });
+        var greenIcon = L.icon({
+            iconUrl: 'https://leafletjs.com/examples/custom-icons/leaf-green.png',
+            iconSize: [38, 95], // size of the icon
+            iconAnchor: [22, 94], // point of the icon which will correspond to marker's location
+            popupAnchor: [-3, -76] // point from which the popup should open relative to the iconAnchor
+        });
+
         L.tileLayer(
             'https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token=pk.eyJ1IjoibWFwYm94IiwiYSI6ImNpejY4NXVycTA2emYycXBndHRqcmZ3N3gifQ.rJcFIG214AriISLbB6B5aw', {
                 maxZoom: 18,
@@ -36,21 +43,21 @@
                 id: 'mapbox.streets'
             }).addTo(mymap);
 
-            
+
 
         var text = '{"uwc":[' +
             '{"name":"Pearson College UWC","location":"Victoria, Canada","latitude":"48.3479497","longitude":"-123.5657213","image_url":"/_site/data/images/news/17/home-Image%201.jpg" },' +
             '{"name":"UWC-USA","location":"Montezuma, New Mexico","latitude":"35.6559717","longitude":"-105.2834712","image_url":"/_site/data/images/news/18/home-UWC173.jpg" },' +
-            '{"name":"","location":"","latitude":"","longitude":"","image_url":"" },' +
-            '{"name":"","location":"","latitude":"","longitude":"","image_url":"" },' +
-            '{"name":"","location":"","latitude":"","longitude":"","image_url":"" },' +
-            '{"name":"","location":"","latitude":"","longitude":"","image_url":"" },' +
-            '{"name":"","location":"","latitude":"","longitude":"","image_url":"" },' +
-            '{"name":"","location":"","latitude":"","longitude":"","image_url":"" },' +
-            '{"name":"","location":"","latitude":"","longitude":"","image_url":"" },' +
-            '{"name":"","location":"","latitude":"","longitude":"","image_url":"" },' +
-            '{"name":"","location":"","latitude":"","longitude":"","image_url":"" },' +
-            '{"name":"","location":"","latitude":"","longitude":"","image_url":"" },' +
+            '{"name":"UWC Costa Rica","location":"Santa Ana Downtown, Costa Rica","latitude":"9.9368646","longitude":"-84.180047","image_url":"/_site/data/images/news/32/home-Agents%20of%20Change%20projects.jpg" },' +
+            '{"name":"UWC Red Cross Nordic","location":"Flekke, Norway","latitude":"61.3306201","longitude":"5.3316886","image_url":"/_site/data/images/news/26/home-UWCRCN_Hiking_2.jpg" },' +
+            '{"name":"UWC Atlantic College","location":"Vale of Glamorgan, Wales, UK","latitude":"51.404566","longitude":"-3.5320861","image_url":"/_site/data/images/news/29/home-Campus-and-Students_03a.jpg" },' +
+            '{"name":"UWC Maastricht","location":"Maastricht, The Netherlands","latitude":"50.8555556","longitude":"5.7211446","image_url":"/_site/data/images/news/31/home-IMG_4087.jpg" },' +
+            '{"name":"UWC Robert Bosch College","location":"Freiburg, Germany","latitude":"47.9945241","longitude":"7.8801739","image_url":"/_site/data/images/news/27/home-UWC%20Robert%20Bosch%20College_Schulerdorf.jpg" },' +
+            '{"name":"UWC Adriatic","location":"Duino, Italy","latitude":"45.7724917","longitude":"13.6031167","image_url":"/_site/data/images/news/28/home-Yearbook%20Picture.jpg" },' +
+            '{"name":"UWC Mostar","location":"Mostar, Bosnia and Herzegovina","latitude":"43.3431517","longitude":"17.805178","image_url":"/_site/data/images/news/25/home-The%20school%20and%20graduation.jpg" },' +
+            '{"name":"UWC Dilijan","location":"Dilijan, Armenia","latitude":"40.7390958","longitude":"44.8299694","image_url":"/_site/data/images/news/30/home-UWC%20Day.jpg" },' +
+            '{"name":"UWC Mahindra College","location":"Pune, India","latitude":"18.5432183","longitude":"73.5824856","image_url":"/_site/data/images/news/24/home-MH2.jpg" },' +
+            '{"name":"UWC Thailand","location":"Phuket, Thailand","latitude":"8.0509888","longitude":"98.3501757","image_url":"/_site/data/images/news/22/home-Walk%20way.jpg" },' +
             '{"name":"","location":"","latitude":"","longitude":"","image_url":"" },' +
             '{"name":"","location":"","latitude":"","longitude":"","image_url":"" },' +
             '{"name":"","location":"","latitude":"","longitude":"","image_url":"" },' +
@@ -60,19 +67,18 @@
         obj = JSON.parse(text);
 
         var i;
-        for (i = 0; i <= 1; i++) {
-            L.marker([obj.uwc[i].latitude, obj.uwc[i].longitude]).addTo(mymap)
-            .bindPopup(
-                "<img src='" + "https://www.uwc.org" +obj.uwc[i].image_url + "' width='200px'/><h3>" + obj.uwc[i].name + "</h3><p>" + obj.uwc[
-                    i].location + "<p>"
-            ).on('mouseover', function (e) {
-                this.openPopup();
-            }).on('mouseout', function (e) {
-                this.closePopup();
-            });
+        for (i = 0; i <= obj.uwc.length; i++) {
+            L.marker([obj.uwc[i].latitude, obj.uwc[i].longitude],{icon: greenIcon}).addTo(mymap)
+                .bindPopup(
+                    "<div style='text-align: center'><img src='" + "https://www.uwc.org" + obj.uwc[i].image_url +
+                    "' width='130px' style='margin:5px;border-radius:50%;border:solid #009b90 7px;box-shadow: 5px 5px 5px #888888;'><br><b style='font-size:1.3em;color:#009b90;'>" +
+                    obj.uwc[i].name + "</b><br><i style='color:#777;'>" + obj.uwc[i].location + "</i></div>"
+                ).on('mouseover', function (e) {
+                    this.openPopup();
+                }).on('mouseout', function (e) {
+                    this.closePopup();
+                });
         }
-
-        
     </script>
 
 </body>
