--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             zoomControl: false
         });
         var greenIcon = L.icon({
-            iconUrl: 'https://leafletjs.com/examples/custom-icons/leaf-green.png',
+            iconUrl: './logo.png',
             iconSize: [38, 95], // size of the icon
             iconAnchor: [22, 94], // point of the icon which will correspond to marker's location
             popupAnchor: [-3, -76] // point from which the popup should open relative to the iconAnchor
@@ -68,7 +68,9 @@
 
         var i;
         for (i = 0; i <= obj.uwc.length; i++) {
-            L.marker([obj.uwc[i].latitude, obj.uwc[i].longitude],{icon: greenIcon}).addTo(mymap)
+            L.marker([obj.uwc[i].latitude, obj.uwc[i].longitude], {
+                    icon: greenIcon
+                }).addTo(mymap)
                 .bindPopup(
                     "<div style='text-align: center'><img src='" + "https://www.uwc.org" + obj.uwc[i].image_url +
                     "' width='130px' style='margin:5px;border-radius:50%;border:solid #009b90 7px;box-shadow: 5px 5px 5px #888888;'><br><b style='font-size:1.3em;color:#009b90;'>" +
