--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 <body>
 
 
-    <div>
-        <img src=""
+    <div style="width:100vw">
+        <img src="./world.svg" alt="map" width="90%">
 
     </div>
 </body>
