--- a/index.html
+++ b/index.html
@@ -6,9 +6,13 @@
 <body>
 
 
-    <div style="width:100vw">
-        <img src="./world.svg" alt="map" width="90%">
-
+    <div style="width:98vw;border:solid red 1px;margin-left: auto;margin-right: auto;position: relative;">
+        <img src="./world.svg" alt="map" width="90%" height="auto">
+        <div>
+            
+                <div style="position: absolute;top:23%;left:16%;" id="pearson">.</div>
+            
+        </div>
     </div>
 </body>
 </html>
