--- a/index.html
+++ b/index.html
@@ -3,16 +3,20 @@
 <head>
 
 </head>
+
 <body>
 
 
-    <div style="width:98vw;border:solid red 1px;margin-left: auto;margin-right: auto;position: relative;">
+    <div style="background-color: #a2dbd8;width:98vw;border:solid red 1px;margin-left: auto;margin-right: auto;position: relative;">
         <img src="./world.svg" alt="map" width="90%" height="auto">
         <div>
-            
-                <div style="position: absolute;top:23%;left:16%;" id="pearson">.</div>
-            
+
+            <div style="position: absolute;top:23%;left:16%;" id="pearson">
+                <img src="./logo.png" style="width:10px;height:10px;">
+            </div>
+
         </div>
     </div>
 </body>
+
 </html>
