--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
 
 </head>
 
-<body>
+<body style="margin:0">
 
 
-    <div style="background-color: #a2dbd8;width:98vw;border:solid red 1px;margin-left: auto;margin-right: auto;position: relative;">
+    <div style="background-color: #a2dbd8;width:100vw;margin:0;position: relative;">
         <img src="./world.svg" alt="map" width="90%" height="auto">
         <div>
 
-            <div style="position: absolute;top:23%;left:16%;" id="pearson">
-                <img src="./logo.png" style="width:10px;height:10px;">
+            <div style="position: absolute;top:21%;left:15.5%;" id="pearson">
+                <img src="./marker.svg" style="width:35px;height:35px;">
             </div>
 
         </div>
