--- a/index.html
+++ b/index.html
@@ -13,10 +13,16 @@
 
             <div style="position: absolute;top:21%;left:15.5%;" id="pearson">
                 <img src="./marker.svg" style="width:35px;height:35px;">
+                <div style="position: relative;">
+                    <div style="position:absolute;left:30px">
+                        A
+                    </div>
+                </div>
             </div>
-
         </div>
     </div>
+
+    
 </body>
 
 </html>
