--- a/index.html
+++ b/index.html
@@ -2,6 +2,54 @@
 
 <head>
 
+    <style>
+        .card {
+            box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+            transition: 0.3s;
+            width: 40%;
+            font-family: sans-serif;
+            background-color: #fff;
+            width: 350px;
+            color: #777;
+            visibility: hidden;
+        }
+
+        .card:hover {
+            box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+        }
+
+        .uwcimg {
+            width: 100px;
+            height: 100px;
+            float: left;
+            margin-right: 10px;
+        }
+
+        .uwcheading {
+            font-size: 1.3em;
+            color: #009B90;
+        }
+
+        .school-container {
+            position: absolute;
+        }
+
+        svg {
+            width: 35px;
+            height: 35px;
+            fill: #FFFFFF;
+            fill-opacity: 0.6;
+            stroke: #FFFFFF;
+            stroke-width: 1.92;
+            cursor: pointer;
+        }
+
+        svg:hover {
+            stroke-width: 5.0;
+            stroke: #fff;
+            fill-opacity: 1.0;
+        }
+    </style>
 </head>
 
 <body style="margin:0">
@@ -9,20 +57,45 @@
 
     <div style="background-color: #a2dbd8;width:100vw;margin:0;position: relative;">
         <img src="./world.svg" alt="map" width="90%" height="auto">
+
         <div>
 
-            <div style="position: absolute;top:21%;left:15.5%;" id="pearson">
-                <img src="./marker.svg" style="width:35px;height:35px;">
+            <!--Pearson-->
+            <div class="school-container" style="top:21%;left:15.5%;" id="Pearson">
+                <div onhover="">
+                    <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
+                        xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 64 64"
+                        style="enable-background:new 0 0 64 64;" xml:space="preserve">
+                        <g>
+                            <g>
+                                <path class="st0" d="M51.7,23.5c0-11-8.8-20-19.7-20s-19.7,9-19.7,20C12.3,40.3,32,60.5,32,60.5S51.7,40.3,51.7,23.5z M22.7,22.7
+			c0-5.2,4.2-9.3,9.3-9.3s9.3,4.2,9.3,9.3S37.2,32,32,32S22.7,27.8,22.7,22.7z" />
+                            </g>
+                        </g>
+                    </svg>
+                </div>
+
                 <div style="position: relative;">
-                    <div style="position:absolute;left:30px">
-                        A
+                    <div class="card" style="position:absolute;left:40px;bottom:-40px;" id="Pearson-card">
+                        <p>
+                            <img src="./img/uwc_pearson.jpg" class="uwcimg">
+                            <span class="uwcheading">Pearson College UWC</span>
+                            <br /> <br />
+                            <i>Victoria, Canada</i>
+                        </p>
+
                     </div>
                 </div>
+
             </div>
+
+
+
         </div>
+
     </div>
 
-    
+
 </body>
 
 </html>
