--- a/index.html
+++ b/index.html
@@ -58,15 +58,15 @@
     </style>
 </head>
 
-<body style="margin:"0"">
+<body style="margin:" 0"">
 
 
-    <div style="background-color: #a2dbd8;width:100vw;margin:"0";position: relative;">
+    <div style="background-color: #a2dbd8;width:100vw;margin:" 0";position: relative;">
         <img src="./world.svg" alt="map" width="90%" height="auto">
 
         <div id="school-list">
 
-            
+
 
 
 
@@ -79,28 +79,6 @@
         $(document).ready(function () {
             $(".card-containers").hide();
             var shown = false;
-
-
-
-            var name = "#Pearson";
-            var cardname = name + "-card";
-
-            $(name).hover(function () {
-                $(cardname).show();
-            }, function () {
-                if (shown == false) {
-                    $(cardname).hide();
-                }
-            });
-
-            $(cardname).hover(function () {
-                $(cardname).show();
-                shown = true;
-            }, function () {
-                $(cardname).fadeOut();
-                shown = false;
-            });
-
 
             var text = '{"uwc":[' +
                 '{"id":"Pearson","name":"Pearson College UWC","location":"Victoria, Canada","top":"0","left":"0","image_url":"/_site/data/images/news/17/home-Image%201.jpg" },' +
@@ -127,16 +105,34 @@
             var i;
             for (i = 0; i < obj.uwc.length; i++) {
                 console.log(obj.uwc[i].id);
-                output+="<!--School--><divclass='school-container'style='top:"+obj.uwc[i].top+"%;left:"+obj.uwc[i].left+"%;'><div><svgid='"+obj.uwc[i].id+"'version='1.1'xmlns='http://www.w3.org/2000/svg'xmlns:xlink='http://www.w3.org/1999/xlink'x='0px'y='0px'viewBox='006464'style='enable-background:new006464;'xml:space='preserve'><g><g><pathclass='st0'd='M51.7,23.5c0-11-8.8-20-19.7-20s-19.7,9-19.7,20C12.3,40.3,32,60.5,32,60.5S51.7,40.3,51.7,23.5zM22.7,22.7c0-5.2,4.2-9.3,9.3-9.3s9.3,4.2,9.3,9.3S37.2,32,32,32S22.7,27.8,22.7,22.7z'/></g></g></svg></div><divstyle='position:relative;'><divclass='card-containers'style='left:20px;bottom:-40px;'id='"+obj.uwc[i].id+"-card'><divclass='card'><imgsrc='./img/"+obj.uwc[i].id+".jpg'class='uwcimg'><divstyle='padding:20px0px0px20px'><spanclass='uwcheading'>"+obj.uwc[i].name+"</span><br/><br/><i>"+obj.uwc[i].location+"</i></div></div></div></div></div>";
+                output += "<!--School--><divclass='school-container'style='top:" + obj.uwc[i].top + "%;left:" +
+                    obj.uwc[i].left + "%;'><div><svgid='" + obj.uwc[i].id +
+                    "'version='1.1'xmlns='http://www.w3.org/2000/svg'xmlns:xlink='http://www.w3.org/1999/xlink'x='0px'y='0px'viewBox='006464'style='enable-background:new006464;'xml:space='preserve'><g><g><pathclass='st0'd='M51.7,23.5c0-11-8.8-20-19.7-20s-19.7,9-19.7,20C12.3,40.3,32,60.5,32,60.5S51.7,40.3,51.7,23.5zM22.7,22.7c0-5.2,4.2-9.3,9.3-9.3s9.3,4.2,9.3,9.3S37.2,32,32,32S22.7,27.8,22.7,22.7z'/></g></g></svg></div><divstyle='position:relative;'><divclass='card-containers'style='left:20px;bottom:-40px;'id='" +
+                    obj.uwc[i].id + "-card'><divclass='card'><imgsrc='./img/" + obj.uwc[i].id +
+                    ".jpg'class='uwcimg'><divstyle='padding:20px0px0px20px'><spanclass='uwcheading'>" + obj.uwc[
+                        i].name + "</span><br/><br/><i>" + obj.uwc[i].location +
+                    "</i></div></div></div></div></div>";
+                var name = "#" + obj.uwc[i].id;
+                var cardname = name + "-card";
+
+                $(name).hover(function () {
+                    $(cardname).show();
+                }, function () {
+                    if (shown == false) {
+                        $(cardname).hide();
+                    }
+                });
+
+                $(cardname).hover(function () {
+                    $(cardname).show();
+                    shown = true;
+                }, function () {
+                    $(cardname).fadeOut();
+                    shown = false;
+                });
             }
 
-
             console.log(output);
-
-
-
-
-
 
         });
     </script>
