--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <style>
         .card {
+            position: relative;
             box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
             transition: 0.3s;
             width: 40%;
@@ -12,6 +13,7 @@
             width: 350px;
             color: #777;
             overflow: auto;
+            z-index: 10;
         }
 
         .card:hover {
@@ -37,10 +39,15 @@
         .card-containers {
             position: absolute;
             padding: 10px;
-            border: solid red 1px;
+            /*border: solid red 1px;*/
+        }
+
+        .svgcontainer {
+            z-index: -1;
         }
 
         svg {
+            z-index: -1;
             width: 35px;
             height: 35px;
             fill: #FFFFFF;
@@ -58,7 +65,7 @@
     </style>
 </head>
 
-<body style="margin:" 0"">
+<body style="margin: 0px">
 
 
     <div style="background-color: #a2dbd8;width:100vw;margin:" 0";position: relative;">
@@ -76,44 +83,16 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script type="text/javascript">
-        $(document).ready(function () {
-            $(".card-containers").hide();
-            var shown = false;
+        function hover(name) {
+            var name = "#" + name;
+            var cardname = name + "-card";
+            console.log(name);
+            $(name).on("click", function () {
+                alert("The paragraph was clicked.");
+            });
 
-            var text = '{"uwc":[' +
-                '{"id":"Pearson","name":"Pearson College UWC","location":"Victoria, Canada","top":"0","left":"0","image_url":"/_site/data/images/news/17/home-Image%201.jpg" },' +
-                '{"id":"USA","name":"UWC-USA","location":"Montezuma, New Mexico","top":"0","left":"0","image_url":"/_site/data/images/news/18/home-UWC173.jpg" },' +
-                '{"id":"CostaRica","name":"UWC Costa Rica","location":"Santa Ana Downtown, Costa Rica","top":"0","left":"0","image_url":"/_site/data/images/news/32/home-Agents%20of%20Change%20projects.jpg" },' +
-                '{"id":"RCN","name":"UWC Red Cross Nordic","location":"Flekke, Norway","top":"0","left":"0","image_url":"/_site/data/images/news/26/home-UWCRCN_Hiking_2.jpg" },' +
-                '{"id":"Atlantic","name":"UWC Atlantic College","location":"Vale of Glamorgan, Wales, UK","top":"0","left":"0","image_url":"/_site/data/images/news/29/home-Campus-and-Students_03a.jpg" },' +
-                '{"id":"Maastricht","name":"UWC Maastricht","location":"Maastricht, The Netherlands","top":"0","left":"0","image_url":"/_site/data/images/news/31/home-IMG_4087.jpg" },' +
-                '{"id":"Bosch","name":"UWC Robert Bosch College","location":"Freiburg, Germany","top":"0","left":"0","image_url":"/_site/data/images/news/27/home-UWC%20Robert%20Bosch%20College_Schulerdorf.jpg" },' +
-                '{"id":"Adriatic","name":"UWC Adriatic","location":"Duino, Italy","top":"0","left":"0","image_url":"/_site/data/images/news/28/home-Yearbook%20Picture.jpg" },' +
-                '{"id":"Mostar","name":"UWC Mostar","location":"Mostar, Bosnia and Herzegovina","top":"0","left":"0","image_url":"/_site/data/images/news/25/home-The%20school%20and%20graduation.jpg" },' +
-                '{"id":"Dilijan","name":"UWC Dilijan","location":"Dilijan, Armenia","top":"0","left":"0","image_url":"/_site/data/images/news/30/home-UWC%20Day.jpg" },' +
-                '{"id":"Mahindra","name":"UWC Mahindra College","location":"Pune, India","top":"0","left":"0","image_url":"/_site/data/images/news/24/home-MH2.jpg" },' +
-                '{"id":"Thailand","name":"UWC Thailand","location":"Phuket, Thailand","top":"0","left":"0","image_url":"/_site/data/images/news/22/home-Walk%20way.jpg" },' +
-                '{"id":"SEA","name":"UWC South East Asia","location":"Singapore","top":"0","left":"0","image_url":"/_site/data/images/news/20/home-UWCSEA_East%20Campus%20Plaza%20overview.jpg" },' +
-                '{"id":"LPC","name":"Li Po Chun UWC","location":"Hong Kong S.A.R, China","top":"0","left":"0","image_url":"/_site/data/images/news/16/home-LPCUWC1.jpg" },' +
-                '{"id":"Changshu","name":"UWC Changshu China","location":"Changshu, China","top":"0","left":"0","image_url":"/_site/data/images/news/21/home-UWC%20Day%201%20Finals-large-10.jpg" },' +
-                '{"id":"ISAK","name":"UWC ISAK Japan","location":"Kariuzawa, Japan","top":"0","left":"0","image_url":"/_site/data/images/news/23/home-UWCIJ_2_Castle.jpg" },' +
-                '{"id":"UWCSA","name":"Waterford Kamhlaba UWC of Southern Africa","location":"Mbabane, Eswatini","top":"0","left":"0","image_url":"/_site/data/images/news/19/home-aerial%20view%20of%20WK_fullsize_Connor%20Baer,%20Leo%20Penny%20and%20Nicolai%20Davies.jpg" },' +
-                '{"id":"UWCEA","name":"UWC East Africa","location":"Moshi and Arusha, Tanzania","top":"0","left":"0","image_url":"/_site/data/images/news/5031/home-View%20of%20Kili%20from%20campus%205).JPG" }]}';
-
-            obj = JSON.parse(text);
-            var output = "";
-            var i;
-            for (i = 0; i < obj.uwc.length; i++) {
-                console.log(obj.uwc[i].id);
-                output += "<!--School--><divclass='school-container'style='top:" + obj.uwc[i].top + "%;left:" +
-                    obj.uwc[i].left + "%;'><div><svgid='" + obj.uwc[i].id +
-                    "'version='1.1'xmlns='http://www.w3.org/2000/svg'xmlns:xlink='http://www.w3.org/1999/xlink'x='0px'y='0px'viewBox='006464'style='enable-background:new006464;'xml:space='preserve'><g><g><pathclass='st0'd='M51.7,23.5c0-11-8.8-20-19.7-20s-19.7,9-19.7,20C12.3,40.3,32,60.5,32,60.5S51.7,40.3,51.7,23.5zM22.7,22.7c0-5.2,4.2-9.3,9.3-9.3s9.3,4.2,9.3,9.3S37.2,32,32,32S22.7,27.8,22.7,22.7z'/></g></g></svg></div><divstyle='position:relative;'><divclass='card-containers'style='left:20px;bottom:-40px;'id='" +
-                    obj.uwc[i].id + "-card'><divclass='card'><imgsrc='./img/" + obj.uwc[i].id +
-                    ".jpg'class='uwcimg'><divstyle='padding:20px0px0px20px'><spanclass='uwcheading'>" + obj.uwc[
-                        i].name + "</span><br/><br/><i>" + obj.uwc[i].location +
-                    "</i></div></div></div></div></div>";
-                var name = "#" + obj.uwc[i].id;
-                var cardname = name + "-card";
+            /*
+            
 
                 $(name).hover(function () {
                     $(cardname).show();
@@ -130,9 +109,87 @@
                     $(cardname).fadeOut();
                     shown = false;
                 });
+            */
+        }
+
+        $(document).ready(function () {
+            /**/
+            var shown = false;
+            var name = "";
+            var cardname = "";
+
+            var text = '{"uwc":[' +
+                '{"id":"Pearson","name":"Pearson College UWC","location":"Victoria, Canada","top":"10","left":"10","image_url":"/_site/data/images/news/17/home-Image%201.jpg","position":"right" },' +
+                '{"id":"USA","name":"UWC-USA","location":"Montezuma, New Mexico","top":"10","left":"20","image_url":"/_site/data/images/news/18/home-UWC173.jpg" ,"position":"right"},' +
+                '{"id":"CostaRica","name":"UWC Costa Rica","location":"Santa Ana Downtown, Costa Rica","top":"10","left":"30","image_url":"/_site/data/images/news/32/home-Agents%20of%20Change%20projects.jpg","position":"right" },' +
+                '{"id":"RCN","name":"UWC Red Cross Nordic","location":"Flekke, Norway","top":"10","left":"40","image_url":"/_site/data/images/news/26/home-UWCRCN_Hiking_2.jpg" ,"position":"right"},' +
+                '{"id":"Atlantic","name":"UWC Atlantic College","location":"Vale of Glamorgan, Wales, UK","top":"10","left":"50","image_url":"/_site/data/images/news/29/home-Campus-and-Students_03a.jpg" ,"position":"right"},' +
+                '{"id":"Maastricht","name":"UWC Maastricht","location":"Maastricht, The Netherlands","top":"10","left":"60","image_url":"/_site/data/images/news/31/home-IMG_4087.jpg","position":"right" },' +
+                '{"id":"Bosch","name":"UWC Robert Bosch College","location":"Freiburg, Germany","top":"10","left":"70","image_url":"/_site/data/images/news/27/home-UWC%20Robert%20Bosch%20College_Schulerdorf.jpg","position":"right" },' +
+                '{"id":"Adriatic","name":"UWC Adriatic","location":"Duino, Italy","top":"10","left":"80","image_url":"/_site/data/images/news/28/home-Yearbook%20Picture.jpg","position":"right" },' +
+                '{"id":"Mostar","name":"UWC Mostar","location":"Mostar, Bosnia and Herzegovina","top":"10","left":"90","image_url":"/_site/data/images/news/25/home-The%20school%20and%20graduation.jpg" ,"position":"right"},' +
+                '{"id":"Dilijan","name":"UWC Dilijan","location":"Dilijan, Armenia","top":"50","left":"10","image_url":"/_site/data/images/news/30/home-UWC%20Day.jpg","position":"right" },' +
+                '{"id":"Mahindra","name":"UWC Mahindra College","location":"Pune, India","top":"50","left":"20","image_url":"/_site/data/images/news/24/home-MH2.jpg","position":"right" },' +
+                '{"id":"Thailand","name":"UWC Thailand","location":"Phuket, Thailand","top":"50","left":"30","image_url":"/_site/data/images/news/22/home-Walk%20way.jpg" ,"position":"right"},' +
+                '{"id":"SEA","name":"UWC South East Asia","location":"Singapore","top":"50","left":"40","image_url":"/_site/data/images/news/20/home-UWCSEA_East%20Campus%20Plaza%20overview.jpg" ,"position":"right"},' +
+                '{"id":"LPC","name":"Li Po Chun UWC","location":"Hong Kong S.A.R, China","top":"50","left":"50","image_url":"/_site/data/images/news/16/home-LPCUWC1.jpg" ,"position":"right"},' +
+                '{"id":"Changshu","name":"UWC Changshu China","location":"Changshu, China","top":"50","left":"60","image_url":"/_site/data/images/news/21/home-UWC%20Day%201%20Finals-large-10.jpg" ,"position":"right"},' +
+                '{"id":"ISAK","name":"UWC ISAK Japan","location":"Kariuzawa, Japan","top":"50","left":"70","image_url":"/_site/data/images/news/23/home-UWCIJ_2_Castle.jpg","position":"left" },' +
+                '{"id":"UWCSA","name":"Waterford Kamhlaba UWC of Southern Africa","location":"Mbabane, Eswatini","top":"50","left":"80","image_url":"/_site/data/images/news/19/home-aerial%20view%20of%20WK_fullsize_Connor%20Baer,%20Leo%20Penny%20and%20Nicolai%20Davies.jpg" ,"position":"right"},' +
+                '{"id":"UWCEA","name":"UWC East Africa","location":"Moshi and Arusha, Tanzania","top":"50","left":"90","image_url":"/_site/data/images/news/5031/home-View%20of%20Kili%20from%20campus%205).JPG","position":"right" }]}';
+
+            obj = JSON.parse(text);
+            var output = "";
+            var i;
+            for (i = 0; i < obj.uwc.length; i++) {
+                var stylepos = "";
+                if(obj.uwc[i].position == "right"){
+                    stylepos = "left:20px;bottom:-40px;";
+                }else{
+                    stylepos = "right:20px;bottom:-40px;";
+                }
+
+                output += "<!--School--><div class='school-container' style='top:" + obj.uwc[i].top +
+                    "%;left:" +
+                    obj.uwc[i].left + "%;'><div class='svgcontainer'><svg id='" + obj.uwc[i].id +
+                    "' version='1.1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' x='0px' y='0px' viewBox='0 0 64 64' style='enable-background:new 0 0 64 64;' xml:space='preserve'><g><g><path class='st0' d='M51.7,23.5c0-11-8.8-20-19.7-20s-19.7,9-19.7,20C12.3,40.3,32,60.5,32,60.5S51.7,40.3,51.7,23.5zM22.7,22.7c0-5.2,4.2-9.3,9.3-9.3s9.3,4.2,9.3,9.3S37.2,32,32,32S22.7,27.8,22.7,22.7z'/></g></g></svg></div><div style='position:relative;'><div class='card-containers' style='"+stylepos+"' id='" +
+                    obj.uwc[i].id + "-card'><div class='card'><img src='./img/" + obj.uwc[i].id +
+                    ".jpg' class='uwcimg'><div style='padding:20px 0px 0px 20px'><span class='uwcheading'>" +
+                    obj
+                    .uwc[i].name + "</span><br/><br/><i>" + obj.uwc[i].location +
+                    "</i></div></div></div></div></div>";
             }
 
             console.log(output);
+            //render to DOM
+            document.getElementById("school-list").innerHTML = output;
+
+
+            $(".card-containers").hide();
+
+
+            $("svg").hover(function () {
+                name = "#" + $(this).attr('id');
+                cardname = name + "-card";
+                $(cardname).show();
+            }, function () {
+                if (shown == false) {
+                    $(cardname).hide();
+                }
+            });
+
+            
+
+            $(".card-containers").hover(function () {
+                name = "#" + $(this).attr('id');
+                cardname = name;
+                $(cardname).show();
+                shown = true;
+            }, function () {
+                $(cardname).fadeOut();
+                shown = false;
+            });
+
 
         });
     </script>
